// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </RCTSafeAreaView>
      <ImageZoomView
        captureEvent={true}
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
      />
      <View>
        <ARTSurfaceView>
          <ARTShape
            d={
              Array [
                2,
                750,
                0,
                2,
                750,
                140,
                2,
                0,
                140,
                2,
                0,
                0,
              ]
            }
            fill={
              Array [
                1,
                750,
                140,
                749.9999999999999,
                -3.108624468950438e-14,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0.9019607843137255,
                1,
                0.35714285714285715,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTSurfaceView>
        <View
          pointerEvents="box-none"
        >
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </RCTSafeAreaView>
      <ImageZoomView
        captureEvent={true}
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
      />
      <View>
        <ARTSurfaceView>
          <ARTShape
            d={
              Array [
                2,
                750,
                0,
                2,
                750,
                140,
                2,
                0,
                140,
                2,
                0,
                0,
              ]
            }
            fill={
              Array [
                1,
                750,
                140,
                749.9999999999999,
                -3.108624468950438e-14,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0.9019607843137255,
                1,
                0.35714285714285715,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTSurfaceView>
        <View
          pointerEvents="box-none"
        />
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </RCTSafeAreaView>
      <ImageZoomView
        captureEvent={true}
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
      />
      <View>
        <ARTSurfaceView>
          <ARTShape
            d={
              Array [
                2,
                750,
                0,
                2,
                750,
                140,
                2,
                0,
                140,
                2,
                0,
                0,
              ]
            }
            fill={
              Array [
                1,
                750,
                140,
                749.9999999999999,
                -3.108624468950438e-14,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0.9019607843137255,
                1,
                0.35714285714285715,
              ]
            }
            opacity={1}
            stroke={null}
            strokeCap={1}
            strokeDash={null}
            strokeJoin={1}
            strokeWidth={1}
            transform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
          />
        </ARTSurfaceView>
        <View
          pointerEvents="box-none"
        >
          <View>
            <Text>
              Caption
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
